minified scripts and fixed duplicate scrollbars and tooltips

--- a/less/stylebar2016.less
+++ b/less/stylebar2016.less
@@ -6,8 +6,10 @@
 @import "tooltips.less";
 
 /* Layout */
-body.stylebar {
-	background: #666;
+body.stylebar-iframe {
+	.breakpoint(@lg, {
+		overflow: hidden;
+    });
 }
 .stylebar-wrapper {
 	display: none;
@@ -122,7 +124,7 @@ body.stylebar {
 #stylebar-site-container {
 	width: 100%;
 	height: 100%;
-	background: #666;
+	background: @neutral;
 	text-align: center;
 	&.stylebar-mobile-landscape > #stylebar-site {
 		width: 627px;
@@ -146,49 +148,52 @@ body.stylebar {
 	}
 	&.stylebar-desktop > #stylebar-site {
 		width: 100%;
+		overflow: hidden;
 	}
 }
 #stylebar-site {
-	background: @neutral;
+	background: #FFF;
 	position: relative;
-	width: 100%; 
+	width: 100%;
 	margin: 0 auto;
-	overflow: hidden; 
 	box-sizing: border-box; 
 	border: 0px; 
 	outline: 0px;
+	overflow: hidden;
 	box-shadow: 0px 0px 15px @shadow;
 	transition: all 0.6s;
 }
-#stylebar-site::-webkit-scrollbar {
-	width: 10px;
-	height: 10px;
-	border-radius: 10px
-}
-#stylebar-site::-webkit-scrollbar-button {
-  width: 0px;
-  height: 0px;
-}
-#stylebar-site::-webkit-scrollbar-thumb {
-  background: #999;
-  border: 0px none #ffffff;
-  border-radius: 8px;
-}
-#stylebar-site::-webkit-scrollbar-thumb:hover {
-  background: #AAA;
-}
-#stylebar-site::-webkit-scrollbar-thumb:active {
-  background: #888;
-}
-#stylebar-site::-webkit-scrollbar-track {
-  background: #F0F0F0;
-  border: 0px none #ffffff;
-  border-radius: 8px;
-}
-#stylebar-site::-webkit-scrollbar-track:hover,
-::-webkit-scrollbar-track:active {
-  background: #E0E0E0;
-}
-#stylebar-site::-webkit-scrollbar-corner {
-  background: transparent;
+#stylebar-site-container:not(.stylebar-desktop) {
+	#stylebar-site::-webkit-scrollbar {
+		width: 10px;
+		height: 10px;
+		border-radius: 10px
+	}
+	#stylebar-site::-webkit-scrollbar-button {
+	  width: 0px;
+	  height: 0px;
+	}
+	#stylebar-site::-webkit-scrollbar-thumb {
+	  background: #999;
+	  border: 0px none #ffffff;
+	  border-radius: 8px;
+	}
+	#stylebar-site::-webkit-scrollbar-thumb:hover {
+	  background: #AAA;
+	}
+	#stylebar-site::-webkit-scrollbar-thumb:active {
+	  background: #888;
+	}
+	#stylebar-site::-webkit-scrollbar-track {
+	  background: #F0F0F0;
+	  border: 0px none #ffffff;
+	  border-radius: 8px;
+	}
+	#stylebar-site::-webkit-scrollbar-track:hover,
+	::-webkit-scrollbar-track:active {
+	  background: #E0E0E0;
+	}
+	#stylebar-site::-webkit-scrollbar-corner {
+	  background: transparent;
+	}
 }
